--- a/PageObjectModelPractice2/test-output/old/FREE CRM Application Test Automation Test Suite/groups.html
+++ b/PageObjectModelPractice2/test-output/old/FREE CRM Application Test Automation Test Suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>AmountVerification</td><td>OrderConfirmationPageTest.verifyAmountCalculatedSuccessfully(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.crm.qa.testcases.OrderConfirmationPageTest@74f280bd]<br/></td></tr>
+</table>
